[backend] get rid of user, refactor mapper service, resolve n + 1, implemet feed page